# capc-iclr

./: LICENSE  README.md  client_server.py  consts.py  csp.py  get_r_star.py  he_client.py  he_server.py  mnist_util.py  model.py  run_experiment.py  server_client.py
config/: 11.json  12.json
gc-emp-test/: .gitignore  CMakeLists.txt  argmax_1.cpp  run_test.py  sum_histogram.cpp
learning/: README.md  active_learning.py  main.py  models.py  queryset.py  test_active_learning.py  utils.py
learning/analysis/: __init__.py  pate.py  rdp_cumulative.py
learning/architectures/: resnet.py  small_resnet.py  summarize.py  tiny_resnet.py
tests/: client_dict.py  test_concat.py  test_concat_n_graph.py  test_max_pool.py  test_sum.py  test_utils.py
utils/: check_rstar.py  client_data.py  main_utils.py  predict_labels.py  remove_files.py  time_utils.py
utils/models/: cryptonets-relu.pb  cryptonets.pb  mlp.pb
